# gRPC-rust-message-app

./: Cargo.toml  README.md  build.rs
proto/: chat.proto
src/: client.rs  server.rs
