[package]
name = "grpc_chat"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3.6"
chrono = "0.4"
tokio-stream = "0.1"
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.12.3"
